# ICAIF_stablecoin-contagion-gnn

./: .gitignore  CITATION.cff  CLAIMS_AND_EVIDENCE.md  HOWTO.md  Makefile  README.md  RESULTS.md  TODO.md  environment.yml  pyproject.toml  reproduce.sh
.github/workflows/: ci.yml
configs/: episodes_v2.yaml  experiment.yaml  model_tgn.yaml  synthetic.yaml
data/: data_card.md  episodes.yaml
data/processed/: base_rates.csv  dataset_manifest.json  feature_names.json  node_registry.json
eval/: ablation_full.py  ablation_graph.py  ablation_paper_table.py  calibration_study.py  failure_analysis.py  failure_analysis_fast.py  label_sensitivity.py  lead_time_analysis.py  lead_time_multi.py  lead_time_presaved.py  loco_stability_fast.py  polish_results.py  robustness_multiseed.py  run_all_eval.py  run_benchmark.py  run_edge_rewiring_null.py  run_tgn.py
exports/: calibration_v1.csv  calibration_v1.json  hub_ranking_v1_BUSD_winddown.csv  hub_ranking_v1_BUSD_winddown.json  hub_ranking_v1_DAI_FTX.csv  hub_ranking_v1_DAI_FTX.json  hub_ranking_v1_USDC_SVB.csv  hub_ranking_v1_USDC_SVB.json  hub_ranking_v1_USDT_May2022.csv  hub_ranking_v1_USDT_May2022.json  hub_ranking_v1_UST_Terra.csv  hub_ranking_v1_UST_Terra.json  schema_v1.json  spurious_hub_BUSD_winddown.json  spurious_hub_DAI_FTX.json  spurious_hub_USDC_SVB.json  spurious_hub_USDT_May2022.json  spurious_hub_UST_Terra.json
features/: onchain_proxies.py
interpret/: attention_analysis.py  attention_fast.py  case_study.py  hub_report.py  run_interpret.py
paper/: JOINT_PAPER.md  preregistration.md  threats_to_validity.md
paper/latex/: README.md  main.tex  references.bib
paper/standalone_gnn_paper/: README.md  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
scripts/: bootstrap_density_ci.py  build_real_dataset.py  episode_graph_density.py  export_calibration.py  export_hubs.py  extra_figures.py  generate_figures.py  paper_style.py  run_label_shuffle_null.py  run_loco.py  run_loco_frax_standalone.py  run_precision_at_k.py  run_precision_at_k_multiseed.py  smoke_test.py  update_hub_table_abm.py
tests/: test_asset_classes.py  test_data_integrity.py  test_directed_edges.py  test_export_schema.py  test_features.py  test_graph_builder.py  test_graph_stats.py  test_hub_ranking.py  test_labels.py  test_labels_precise.py  test_leakage.py  test_loeo_leakage.py  test_propagator_label.py  test_registry.py
train/: run_ladder.py
(+131 files in other folders)
